no longer collapsing extra tracks

--- a/static/sass/_track.scss
+++ b/static/sass/_track.scss
@@ -16,13 +16,13 @@ body > #tracks {
         &:nth-of-type(1) {
             margin-left: 0;
         }
-    
-        @media screen and (max-width: 54em) {
-            // collapse all but first
-            &:nth-of-type(n+2) {
-                @include collapse;
-            }
-        }
+        // 
+        // @media screen and (max-width: 54em) {
+        //     // collapse all but first
+        //     &:nth-of-type(n+2) {
+        //         @include collapse;
+        //     }
+        // }
     
         @media screen and (min-width: 54em) {
             width: $col * ($columns / 2);
